--- a/FrontEnd/SysAcad/src/app/components/administrador/busqueda/resultado/resultado.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/busqueda/resultado/resultado.component.html
@@ -88,8 +88,8 @@
         </div>
         <!-- Campo: Número -->
         <div class="col-md-6">
-          <label for="legajo" class="form-label text-white mb-0">Número</label>
-          <input type="text" id="legajo" [value]="admin.numero" readonly class="form-control mt-0 mb-3">
+          <label for="legajo" class="form-label text-white mb-0">Id</label>
+          <input type="text" id="id" [value]="admin.id" readonly class="form-control mt-0 mb-3">
         </div>
       </div>
       <!-- Botones de acción -->
